--- a/Okta/nm-factory-inf-pip-operation-okta-dpro-user-mgmt.yml
+++ b/Okta/nm-factory-inf-pip-operation-okta-dpro-user-mgmt.yml
@@ -142,6 +142,8 @@ stages:
       inputs:
         targetType: 'inline'
         script: |   
+          jq --version
+
           echo "Create variable with all groups needed"
           if [[ ${{parameters.dproGroup}} == "1c,2c" ]]; then
              list_group=("dprodev1c_dplt_administrator"               "dprodev1c_plop_full_write"                 "dprodev1c_plop_full_read" "dprodev1c_po_full_write" "dprodev1c_po_full_read" "dprodev1c_po_product_read" "dprodev1c_po_product_write" "dprodev2c_dplt_administrator"               "dprodev2c_plop_full_write"                 "dprodev2c_plop_full_read" "dprodev2c_po_full_write" "dprodev2c_po_full_read" "dprodev2c_po_product_read" "dprodev2c_po_product_write")
