--- a/Okta/nm-factory-inf-pip-operation-okta-dpro-user-mgmt.yml
+++ b/Okta/nm-factory-inf-pip-operation-okta-dpro-user-mgmt.yml
@@ -142,8 +142,6 @@ stages:
       inputs:
         targetType: 'inline'
         script: |   
-          jq --version
-
           echo "Create variable with all groups needed"
           if [[ ${{parameters.dproGroup}} == "1c,2c" ]]; then
              list_group=("dprodev1c_dplt_administrator"               "dprodev1c_plop_full_write"                 "dprodev1c_plop_full_read" "dprodev1c_po_full_write" "dprodev1c_po_full_read" "dprodev1c_po_product_read" "dprodev1c_po_product_write" "dprodev2c_dplt_administrator"               "dprodev2c_plop_full_write"                 "dprodev2c_plop_full_read" "dprodev2c_po_full_write" "dprodev2c_po_full_read" "dprodev2c_po_product_read" "dprodev2c_po_product_write")
@@ -153,6 +151,18 @@ stages:
              echo "Bad dpro group option"
              exit -1
           fi
+
+          curl -XGET \
+            -H "Accept: application/json" \
+            -H "Content-Type: application/json" \
+            -H "Authorization: SSWS ${OKTA_TOKEN}" \
+            "https://${{variables.oktaDomain}}/api/v1/groups?search=profile.name+eq+%22dprodev1c_dplt_administrator%22" | jq
+
+          curl -XGET \
+            -H "Accept: application/json" \
+            -H "Content-Type: application/json" \
+            -H "Authorization: SSWS ${OKTA_TOKEN}" \
+            "https://${{variables.oktaDomain}}/api/v1/groups?search=profile.name+eq+%22dprodev1c_dplt_administrator%22" | jq -r '.[].id'
 
           echo "Get group ids from all the groups at which the user will be added"
           for i in ${!list_group[@]}; do
