feat(SYGFAWIUZF-295): Added env at update_user job

--- a/Okta/nm-factory-inf-pip-operation-okta-dpro-user-mgmt.yml
+++ b/Okta/nm-factory-inf-pip-operation-okta-dpro-user-mgmt.yml
@@ -204,6 +204,8 @@ stages:
             fi
           done
           exit 0
+      env:
+        OKTA_TOKEN: $(okta-token)          
 
   - job: delete_okta_user
     condition: ${{ eq(parameters.option, 'delete_user') }}
