--- a/Okta/nm-factory-inf-pip-operation-okta-dpro-user-mgmt.yml
+++ b/Okta/nm-factory-inf-pip-operation-okta-dpro-user-mgmt.yml
@@ -56,25 +56,6 @@ stages:
       inputs:
         targetType: 'inline'
         script: |
-          echo "Create variable with all groups needed"
-          if [[ ${{parameters.dproGroup}} == "1c,2c" ]]; then
-             list_group=("dprodev1c_dplt_administrator"               "dprodev1c_plop_full_write"                 "dprodev1c_plop_full_read" "dprodev1c_po_full_write" "dprodev1c_po_full_read" "dprodev1c_po_product_read" "dprodev1c_po_product_write" "dprodev2c_dplt_administrator"               "dprodev2c_plop_full_write"                 "dprodev2c_plop_full_read" "dprodev2c_po_full_write" "dprodev2c_po_full_read" "dprodev2c_po_product_read" "dprodev2c_po_product_write")
-          elif [[ ${{parameters.dproGroup}} == "1c,2c,3c" ]]; then
-             list_group=("dprodev1c_dplt_administrator"               "dprodev1c_plop_full_write"                 "dprodev1c_plop_full_read" "dprodev1c_po_full_write" "dprodev1c_po_full_read" "dprodev1c_po_product_read" "dprodev1c_po_product_write" "dprodev2c_dplt_administrator"               "dprodev2c_plop_full_write"                 "dprodev2c_plop_full_read" "dprodev2c_po_full_write" "dprodev2c_po_full_read" "dprodev2c_po_product_read" "dprodev2c_po_product_write" "dprodev3c_dplt_administrator"               "dprodev3c_plop_full_write"                 "dprodev3c_plop_full_read" "dprodev3c_po_full_write" "dprodev3c_po_full_read" "dprodev3c_po_product_read" "dprodev3c_po_product_write")
-          else
-             echo "Bad dpro group option"
-             exit -1
-          fi
-
-          echo "Get group ids from all the groups at which the user will be added"
-          for i in ${!list_group[@]}; do
-            listid_group[$i]=$(curl -XGET \
-            -H "Accept: application/json" \
-            -H "Content-Type: application/json" \
-            -H "Authorization: SSWS ${OKTA_TOKEN}" \
-            "https://${{variables.oktaDomain}}/api/v1/groups?search=profile.name+eq+%22${list_group[$i]}%22" | jq -r '.[].id')
-          done
-
           echo "Creating user and sending activation mail"
           curl --no-progress-meter -w '{"http_code": "%{http_code}"}' -X POST \
           -H "Accept: application/json" \
@@ -98,33 +79,12 @@ stages:
           else
             echo "User created successfully"
           fi
-
-          echo "Get the ID of the new created user"
-          userId=$(curl -X GET \
-          -H "Accept: application/json" \
-          -H "Content-Type: application/json" \
-          -H "Authorization: SSWS ${OKTA_TOKEN}" \
-          "https://${{variables.oktaDomain}}/api/v1/users?search=profile.email+eq+%22${{parameters.email}}%22" | jq -r '.[].id')
-
-          echo "Adding the user to the groups"
-          for i in ${!listid_group[@]}; do
-            curl --no-progress-meter -w '{"http_code": "%{http_code}"}' -X PUT \
-            -H "Accept: application/json" \
-            -H "Content-Type: application/json" \
-            -H "Authorization: SSWS ${OKTA_TOKEN}" \
-            "https://${{variables.oktaDomain}}/api/v1/groups/${listid_group[$i]}/users/$userId" | jq -r '.http_code' > http_code
-            if [[ $http_code -ge 400 ]]; then
-              echo "User has not been added to ${list_group[$i]} group"
-              exit -1
-            else
-              echo "User successfully added to ${list_group[$i]} group"
-            fi
-          done
       env:
         OKTA_TOKEN: $(okta-token)
 
-  - job: update_okta_user
-    condition: ${{ eq(parameters.option, 'update_user') }}
+  - job: adding_user_to_groups
+    condition: In( ${{parameters.option}}, 'create_user', 'update_user')
+    dependsOn: create_okta_user
     steps:
     - task: AzureKeyVault@2
       displayName: 'Azure Key Vault: ecl-az-fact-kvt-01-main'
@@ -135,7 +95,7 @@ stages:
         RunAsPreJob: true     
 
     - task: Bash@3
-      displayName: 'Updating user'
+      displayName: 'Adding user to groups'
       inputs:
         targetType: 'inline'
         script: |   
