feature(SYGFAWIUZF-295): Modified the create user sentence to activate the user after created it to send the mail to configure a token

--- a/Okta/nm-factory-inf-pip-operation-okta-dpro-user-mgmt.yml
+++ b/Okta/nm-factory-inf-pip-operation-okta-dpro-user-mgmt.yml
@@ -68,7 +68,7 @@ stages:
               "email": "'"${{parameters.email}}"'",
               "login": "'"${{parameters.email}}"'"
             }
-          }' "https://${{variables.oktaDomain}}/api/v1/users?activate=false" | jq -s '.[-1] * .[-2]' | jq "{ http_code: .http_code, id: .id, status: .status, profile: .profile, errorSummary: .errorSummary, errorCauses: .errorCauses }" > resp.json
+          }' "https://${{variables.oktaDomain}}/api/v1/users?activate=true" | jq -s '.[-1] * .[-2]' | jq "{ http_code: .http_code, id: .id, status: .status, profile: .profile, errorSummary: .errorSummary, errorCauses: .errorCauses }" > resp.json
 
           cat resp.json
           http_code=$(jq .http_code resp.json | tr -d '"') 
