feature(SYGFAWIUZF-295): Modified the keycloak options to add Nexus permissions to all developers and also an option for both Jenkins developers

--- a/Keycloak/users_mgmt_factory.yml
+++ b/Keycloak/users_mgmt_factory.yml
@@ -27,7 +27,7 @@ parameters:
       - dplt_pipeline
       - dplt_developer
       - infra_admin
-      - avitech_slovakia
+      - dpro_dplt_developer
       - remove_user
 
 stages:
