feature/SYGFAWIUZF-347: Correct the parameter name

--- a/Keycloak/users_mgmt-factory-dev.yml
+++ b/Keycloak/users_mgmt-factory-dev.yml
@@ -26,7 +26,7 @@ parameters:
       - create_user
       - update_user
       - remove_user    
-  - name: option
+  - name: group
     displayName: Group Option
     type: string
     values:
