DPLT-15278: add dplt_developers to AZdevops

--- a/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
+++ b/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
@@ -181,7 +181,7 @@ stages:
               mail=`sed -n '/^group_dplt_dev_members/,/^]/p' terraform.tfvars | grep ${{ parameters.mail }}`
               if [[ -z "$mail" ]] 
               then 
-                echo "Adding new user to dplt_developer Azure Devops Group"
+                echo "Adding new user to dplt_developer Azure AD Group"
                 sed -i "/group_dplt_dev_members/a \ \ \"${{ parameters.mail }}\"," terraform.tfvars
                 echo "User added to dplt_developer group"
               fi     
@@ -470,6 +470,16 @@ stages:
               fi
             ;;              
             dplt_pipeline)
+              echo "Check that user is not currently at the group all_users"
+              mail=`sed -n '/^all_users/,/^]/p' terraform.tfvars | grep $user_mail`
+              if [[ -z "$mail" ]] 
+              then 
+                echo "Adding new user to all_users group"
+                sed -i "/all_users/a \ \ \"$user_mail\"," terraform.tfvars
+                echo "User added to all_users group"
+              fi
+            ;;
+            dplt_developer)
               echo "Check that user is not currently at the group all_users"
               mail=`sed -n '/^all_users/,/^]/p' terraform.tfvars | grep $user_mail`
               if [[ -z "$mail" ]] 
