--- a/Okta/nm-factory-inf-pip-operation-okta-dpro-user-mgmt.yml
+++ b/Okta/nm-factory-inf-pip-operation-okta-dpro-user-mgmt.yml
@@ -22,8 +22,8 @@ parameters:
   displayName: Okta DPRO Group
   type: string
   values:
-    - 1c,2c
-    - 1c,2c,3c
+    - developer(dprodev1c,dprodev3c,dprodev4c,nmdevtst4c,nmdevtst8c,nmdevtst10c)
+    - administrator(dprodev1c)
 
 - name: option
   displayName: Option
@@ -100,10 +100,10 @@ stages:
         targetType: 'inline'
         script: |   
           echo "Create variable with all groups needed"
-          if [[ ${{parameters.dproGroup}} == "1c,2c" ]]; then
-             list_group=("dprodev1c_dplt_administrator"               "dprodev1c_plop_full_write"                 "dprodev1c_plop_full_read" "dprodev1c_po_full_write" "dprodev1c_po_full_read" "dprodev1c_po_product_read" "dprodev1c_po_product_write" "dprodev2c_dplt_administrator"               "dprodev2c_plop_full_write"                 "dprodev2c_plop_full_read" "dprodev2c_po_full_write" "dprodev2c_po_full_read" "dprodev2c_po_product_read" "dprodev2c_po_product_write")
-          elif [[ ${{parameters.dproGroup}} == "1c,2c,3c" ]]; then
-             list_group=("dprodev1c_dplt_administrator"               "dprodev1c_plop_full_write"                 "dprodev1c_plop_full_read" "dprodev1c_po_full_write" "dprodev1c_po_full_read" "dprodev1c_po_product_read" "dprodev1c_po_product_write" "dprodev2c_dplt_administrator"               "dprodev2c_plop_full_write"                 "dprodev2c_plop_full_read" "dprodev2c_po_full_write" "dprodev2c_po_full_read" "dprodev2c_po_product_read" "dprodev2c_po_product_write" "dprodev3c_dplt_administrator"               "dprodev3c_plop_full_write"                 "dprodev3c_plop_full_read" "dprodev3c_po_full_write" "dprodev3c_po_full_read" "dprodev3c_po_product_read" "dprodev3c_po_product_write")
+          if [[ ${{parameters.dproGroup}} == "developer(dprodev1c,dprodev3c,dprodev4c,nmdevtst4c,nmdevtst8c,nmdevtst10c)" ]]; then
+             list_group=("dprodev1c_dplt_developer"               "dprodev3c_dplt_developer"                 "dprodev4c_dplt_developer" "nmdevtst4c_dplt_developer" "nmdevtst8c_dplt_developer" "nmdevtst10c_dplt_developer")
+          elif [[ ${{parameters.dproGroup}} == "administrator(dprodev1c)" ]]; then
+             list_group=("dprodev1c_dplt_administrator")
           else
              echo "Bad dpro group option"
              exit -1
