--- a/Okta/nm-factory-inf-pip-operation-ciam-okta-dpro-user-mgmt.yml
+++ b/Okta/nm-factory-inf-pip-operation-ciam-okta-dpro-user-mgmt.yml
@@ -51,7 +51,7 @@ stages:
 
           echo "userId = $userId" 
 
-          if [[ -z userId ]]; then
+          if [[ userId == ' ' ]]; then
             echo "Creating user and sending activation mail"
             curl --no-progress-meter -w '{"http_code": "%{http_code}"}' -X POST \
             -H "Accept: application/json" \
