--- a/Okta/nm-factory-inf-pip-operation-ciam-okta-dpro-user-mgmt.yml
+++ b/Okta/nm-factory-inf-pip-operation-ciam-okta-dpro-user-mgmt.yml
@@ -36,6 +36,14 @@ stages:
   - job: create_okta_user
     condition: ${{ eq(parameters.option, 'create_user') }}
     steps:
+    - task: AzureKeyVault@2
+      displayName: 'Azure Key Vault: ecl-az-fact-kvt-01-main'
+      inputs:
+        azureSubscription: 'ecl-az-fact-svc-01-armconnection'
+        KeyVaultName: 'ecl-az-fact-kvt-01-main'
+        SecretsFilter: 'okta-ciam-token'
+        RunAsPreJob: true  
+
     - task: Bash@3
       displayName: 'Creation of the user'
       inputs:
@@ -45,7 +53,7 @@ stages:
           curl --no-progress-meter -w '{"http_code": "%{http_code}"}' -X POST \
           -H "Accept: application/json" \
           -H "Content-Type: application/json" \
-          -H "Authorization: SSWS $(okta-token)" \
+          -H "Authorization: SSWS ${OKTA_CIAM_TOKEN}" \
           -d '{
             "profile": {
               "firstName": "'"${{parameters.firstName}}"'",
@@ -63,10 +71,21 @@ stages:
             echo "User created successfully"
           fi
 
+      env:
+        OKTA_CIAM_TOKEN: $(okta-ciam-token)
+
   - job: adding_user_to_groups
     condition: ${{ eq(parameters.option, 'create_user') }}
     dependsOn: create_okta_user
     steps:  
+    - task: AzureKeyVault@2
+      displayName: 'Azure Key Vault: ecl-az-fact-kvt-01-main'
+      inputs:
+        azureSubscription: 'ecl-az-fact-svc-01-armconnection'
+        KeyVaultName: 'ecl-az-fact-kvt-01-main'
+        SecretsFilter: 'okta-ciam-token'
+        RunAsPreJob: true  
+
     - task: Bash@3
       displayName: 'Adding user to group(s)'
       inputs:
@@ -80,7 +99,7 @@ stages:
             listid_group[$i]=$(curl -XGET \
             -H "Accept: application/json" \
             -H "Content-Type: application/json" \
-            -H "Authorization: SSWS $(okta-token)" \
+            -H "Authorization: SSWS ${OKTA_CIAM_TOKEN}" \
             "https://${{variables.oktaDomain}}/api/v1/groups?search=profile.name+eq+%22${list_group[$i]}%22" | jq -r '.[].id')
           done
 
@@ -88,7 +107,7 @@ stages:
           userId=$(curl -X GET \
           -H "Accept: application/json" \
           -H "Content-Type: application/json" \
-          -H "Authorization: SSWS $(okta-token)" \
+          -H "Authorization: SSWS ${OKTA_CIAM_TOKEN}" \
           "https://${{variables.oktaDomain}}/api/v1/users?search=profile.email+eq+%22${{parameters.email}}%22" | jq -r '.[].id')    
 
           echo "Adding the user to the group(s)"
@@ -96,7 +115,7 @@ stages:
             curl --no-progress-meter -w '{"http_code": "%{http_code}"}' -X PUT \
             -H "Accept: application/json" \
             -H "Content-Type: application/json" \
-            -H "Authorization: SSWS $(okta-token)" \
+            -H "Authorization: SSWS ${OKTA_CIAM_TOKEN}" \
             "https://${{variables.oktaDomain}}/api/v1/groups/${listid_group[$i]}/users/$userId" | jq -r '.http_code' > http_code
             if [[ $http_code -ge 400 ]]; then
               echo "User has not been added to ${list_group[$i]} group"
@@ -106,9 +125,20 @@ stages:
             fi
           done       
 
+      env:
+        OKTA_CIAM_TOKEN: $(okta-ciam-token)
+
   - job: delete_okta_user
     condition: ${{ eq(parameters.option, 'delete_user') }}
     steps:
+    - task: AzureKeyVault@2
+      displayName: 'Azure Key Vault: ecl-az-fact-kvt-01-main'
+      inputs:
+        azureSubscription: 'ecl-az-fact-svc-01-armconnection'
+        KeyVaultName: 'ecl-az-fact-kvt-01-main'
+        SecretsFilter: 'okta-ciam-token'
+        RunAsPreJob: true  
+
     - task: Bash@3
       displayName: 'Deleting user'
       inputs:
@@ -118,7 +148,7 @@ stages:
           userId=$(curl -X GET \
           -H "Accept: application/json" \
           -H "Content-Type: application/json" \
-          -H "Authorization: SSWS $(okta-token)" \
+          -H "Authorization: SSWS ${OKTA_CIAM_TOKEN}" \
           "https://${{variables.oktaDomain}}/api/v1/users?search=profile.email+sw+%22${{parameters.email}}%22" | jq -r '.[].id')
           if [[ -z userId ]]; then
             echo "User does not exist"
@@ -131,7 +161,7 @@ stages:
           curl --no-progress-meter -w '{"http_code": "%{http_code}"}' -X POST \
           -H "Accept: application/json" \
           -H "Content-Type: application/json" \
-          -H "Authorization: SSWS $(okta-token)" \
+          -H "Authorization: SSWS ${OKTA_CIAM_TOKEN}" \
           "https://${{variables.oktaDomain}}/api/v1/users/$userId/lifecycle/deactivate?sendEmail=false" | jq -s '.[-1] * .[-2]' | jq "{ http_code: .http_code, id: .id, status: .status, profile: .profile, errorSummary: .errorSummary, errorCauses: .errorCauses }" > resp.json
 
           http_code=$(jq .http_code resp.json | tr -d '"') 
@@ -146,7 +176,7 @@ stages:
           curl --no-progress-meter -w '{"http_code": "%{http_code}"}' -X DELETE \
           -H "Accept: application/json" \
           -H "Content-Type: application/json" \
-          -H "Authorization: SSWS $(okta-token)" \
+          -H "Authorization: SSWS ${OKTA_CIAM_TOKEN}" \
           "https://${{variables.oktaDomain}}/api/v1/users/$userId?sendEmail=false" | jq -s '.[-1] * .[-2]' | jq "{ http_code: .http_code, id: .id, status: .status, profile: .profile, errorSummary: .errorSummary, errorCauses: .errorCauses }" > resp.json
           http_code=$(jq .http_code resp.json | tr -d '"') 
           if [[ $http_code -ge 400 ]]; then
@@ -155,3 +185,6 @@ stages:
           else
             echo "User deleted successfully"
           fi
+
+      env:
+        OKTA_CIAM_TOKEN: $(okta-ciam-token)
