--- a/Okta/nm-factory-inf-pip-operation-okta-dpro-user-mgmt.yml
+++ b/Okta/nm-factory-inf-pip-operation-okta-dpro-user-mgmt.yml
@@ -22,10 +22,8 @@ parameters:
   displayName: Okta DPRO Group
   type: string
   values:
-    - dprodev_admin
-    - dprodev_developer
-    - nmdevtst_admin
-    - nmdevtst_developer
+    - dprodev
+    - nmdevtst
 
 - name: option
   displayName: Option
@@ -101,14 +99,10 @@ stages:
         targetType: 'inline'
         script: |   
           echo "Create variable with all groups needed"
-          if [[ ${{parameters.dproGroup}} == "dprodev_admin" ]]; then
-             list_group=("dprodev1c_dplt_administrator"               "dprodev2c_dplt_administrator"               "dprodev3c_dplt_administrator"                 "dprodev4c_dplt_administrator")
-          elif [[ ${{parameters.dproGroup}} == "dprodev_developer" ]]; then
-             list_group=("dprodev1c_dplt_developer"               "dprodev2c_dplt_developer"               "dprodev3c_dplt_developer"                 "dprodev4c_dplt_developer")     
-          elif [[ ${{parameters.dproGroup}} == "nmdevtst_admin" ]]; then
-             list_group=("nmdevtst2c_dplt_administrator"               "nmdevtst4c_dplt_administrator" "nmdevtst8c_dplt_administrator" "nmdevtst10c_dplt_administrator")                     
-          elif [[ ${{parameters.dproGroup}} == "nmdevtst_developer" ]]; then
-             list_group=("nmdevtst2c_dplt_developer"               "nmdevtst4c_dplt_developer" "nmdevtst8c_dplt_developer" "nmdevtst10c_dplt_developer")              
+          if [[ ${{parameters.dproGroup}} == "dprodev" ]]; then
+             list_group=("dprodev1c_dplt_administrator"               "dprodev2c_dplt_administrator"               "dprodev3c_dplt_administrator"                 "dprodev4c_dplt_administrator"                 "dprodev1c_dplt_developer"               "dprodev2c_dplt_developer"               "dprodev3c_dplt_developer"                 "dprodev4c_dplt_developer")
+          elif [[ ${{parameters.dproGroup}} == "nmdevtst" ]]; then
+             list_group=("nmdevtst2c_dplt_administrator"               "nmdevtst4c_dplt_administrator"                 "nmdevtst8c_dplt_administrator"                 "nmdevtst10c_dplt_administrator"               "nmdevtst2c_dplt_developer"               "nmdevtst4c_dplt_developer"                 "nmdevtst8c_dplt_developer"                 "nmdevtst10c_dplt_developer")                               
           else
              echo "Bad dpro group option"
              exit -1
