--- a/Okta/nm-factory-inf-pip-operation-okta-dpro-user-mgmt.yml
+++ b/Okta/nm-factory-inf-pip-operation-okta-dpro-user-mgmt.yml
@@ -100,7 +100,7 @@ stages:
         script: |   
           echo "Create variable with all groups needed"
           if [[ ${{parameters.dproGroup}} == "dprodev" ]]; then
-             list_group=("dprodev1c_dplt_administrator"               "dprodev2c_dplt_administrator"               "dprodev3c_dplt_administrator"                 "dprodev4c_dplt_administrator"                 "dprodev1c_dplt_developer"               "dprodev2c_dplt_developer"               "dprodev3c_dplt_developer"                 "dprodev4c_dplt_developer")
+             list_group=("dprodev1c_dplt_administrator"               "dprodev3c_dplt_administrator"                 "dprodev4c_dplt_administrator"                 "dprodev1c_dplt_developer"               "dprodev3c_dplt_developer"                 "dprodev4c_dplt_developer")
           elif [[ ${{parameters.dproGroup}} == "nmdevtst" ]]; then
              list_group=("nmdevtst2c_dplt_administrator"               "nmdevtst4c_dplt_administrator"                 "nmdevtst8c_dplt_administrator"                 "nmdevtst10c_dplt_administrator"               "nmdevtst2c_dplt_developer"               "nmdevtst4c_dplt_developer"                 "nmdevtst8c_dplt_developer"                 "nmdevtst10c_dplt_developer")                               
           else
