--- a/Okta/nm-factory-inf-pip-operation-okta-dpro-user-mgmt.yml
+++ b/Okta/nm-factory-inf-pip-operation-okta-dpro-user-mgmt.yml
@@ -22,8 +22,12 @@ parameters:
   displayName: Okta DPRO Group
   type: string
   values:
-    - dprodev
-    - nmdevtst
+    - Openshift_Factory(1C,3C,4C)_developer
+    - Openshift_Factory(1C,3C,4C)_PGadmin
+    - Openshift_Factory(1C,3C,4C)_operator
+    - Openshift_Factory(2C)
+    - ECTL_Openshift(2C,4C,8C,9C,10C,11C,14C)_developer
+    - ECTL_Openshift(2C,4C,8C,9C,10C,11C,14C)_PGadmin    
 
 - name: option
   displayName: Option
@@ -99,10 +103,18 @@ stages:
         targetType: 'inline'
         script: |   
           echo "Create variable with all groups needed"
-          if [[ ${{parameters.dproGroup}} == "dprodev" ]]; then
-             list_group=("dprodev1c_dplt_administrator"               "dprodev3c_dplt_administrator"                 "dprodev4c_dplt_administrator"                 "dprodev1c_dplt_developer"               "dprodev3c_dplt_developer"                 "dprodev4c_dplt_developer")
-          elif [[ ${{parameters.dproGroup}} == "nmdevtst" ]]; then
-             list_group=("nmdevtst2c_dplt_administrator"               "nmdevtst4c_dplt_administrator"                 "nmdevtst8c_dplt_administrator"                 "nmdevtst10c_dplt_administrator"               "nmdevtst2c_dplt_developer"               "nmdevtst4c_dplt_developer"                 "nmdevtst8c_dplt_developer"                 "nmdevtst10c_dplt_developer")                               
+          if [[ ${{parameters.dproGroup}} == "Openshift_Factory(1C,3C,4C)_developer" ]]; then
+             list_group=("dprodev1c_dplt_developer"               "dprodev3c_dplt_developer"                 "dprodev4c_dplt_developer")
+          elif [[ ${{parameters.dproGroup}} == "Openshift_Factory(1C,3C,4C)_PGadmin" ]]; then
+             list_group=("dprodev1c_dplt_administrator"               "dprodev3c_dplt_administrator"                 "dprodev4c_dplt_administrator")
+          elif [[ ${{parameters.dproGroup}} == "Openshift_Factory(1C,3C,4C)_operator" ]]; then
+             list_group=("dprodev1c_dplt_operator"               "dprodev3c_dplt_operator"                 "dprodev4c_dplt_operator")
+          elif [[ ${{parameters.dproGroup}} == "Openshift_Factory(2C)" ]]; then
+             list_group=("dprodev2c_dplt_administrator"               "dprodev2c_dplt_developer")
+          elif [[ ${{parameters.dproGroup}} == "ECTL_Openshift(2C,4C,8C,9C,10C,11C,14C)_developer" ]]; then
+             list_group=("nmdevtst2c_dplt_developer"               "nmdevtst4c_dplt_developer"                 "nmdevtst8c_dplt_developer"                 "nmdevtst10c_dplt_developer"                 "nmdevtst11c_dplt_developer"                 "nmdevtst14c_dplt_developer")                               
+          elif [[ ${{parameters.dproGroup}} == "ECTL_Openshift(2C,4C,8C,9C,10C,11C,14C)_PGadmin" ]]; then
+             list_group=("nmdevtst2c_dplt_administrator"               "nmdevtst4c_dplt_administrator"                 "nmdevtst8c_dplt_administrator"                 "nmdevtst10c_dplt_administrator"               "nmdevtst11c_dplt_administrator"               "nmdevtst14c_dplt_administrator")                               
           else
              echo "Bad dpro group option"
              exit -1
